fix: edit nginx.conf (#17)

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
             try_files $uri /index.html;
         }
 
-        API 요청을 백엔드 서버로 프록시
+        #API 요청을 백엔드 서버로 프록시
         location /api/ {
             proxy_pass http://app:8080;
             proxy_http_version 1.1;  # HTTP/1.1 사용
