--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "what's-your-etf",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "start": "vite", 
+    "build": "vite build", 
+    "preview": "vite preview", 
     "lint": "eslint .",
-    "preview": "vite preview"
+    "test": "echo \"No test specified\" && exit 1" 
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -27,15 +29,21 @@
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
     "vite": "^5.4.10"
-  }
+  },
+  "eslintConfig": {
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended"
+    ],
+    "rules": {
+      "react/react-in-jsx-scope": "off",
+      "react/prop-types": "off"
+    }
+  },
+  "proxy": "http://localhost:8080" 
 }
