--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "vite", 
-    "build": "vite build", 
-    "preview": "vite preview", 
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "test": "echo \"No test specified\" && exit 1" 
+    "test": "echo \"No test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -29,10 +29,15 @@
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.11.0",
     "vite": "^5.4.10"
   },
   "eslintConfig": {
@@ -45,5 +50,5 @@
       "react/prop-types": "off"
     }
   },
-  "proxy": "http://localhost:8080" 
+  "proxy": "http://localhost:8080"
 }
