--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.460.0",
     "match-sorter": "^7.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
