--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.28.0",
+    "recharts": "^2.13.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
